--- a/client/vues/application/index.html
+++ b/client/vues/application/index.html
@@ -1,3 +1,9 @@
-<template name="index">
-    <h2>Accueil</h2>
+﻿<template name="index">
+    <body>
+		<div class="container">
+			<div class="jumbotron">
+				<p> Bienvenue sur le système de gestion des étudiants de l'IUT de Lens </p>
+			</div>
+		</div>
+    </body>
 </template>
