--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -1,4 +1,4 @@
-<template name="mainLayout">
+ï»¿<template name="mainLayout">
     <head>
     <title>Gestion des etudiants</title>
 <!--	<link rel="stylesheet" href="../assets/styles/bootstrap.css" />
@@ -21,19 +21,19 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="http://localhost:1337">Accueil</a>
+				<a class="navbar-brand" href="http://localhost:3000">Accueil</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Liste des étudiants</a></li>
-					<li><a href="#">Liste des devoirs</a></li>
+					<li><a href="#">Liste des Etudiants</a></li>
+					<li><a href="#">Liste des Devoirs</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Ajouter une abscence</a></li>
 							<li><a href="#">Ajouter un retard</a></li>
 							<li class="divider"></li>
-							<li><a href="#">Ajouter un étudiant</a></li>
+							<li><a href="#">Ajouter un Ã©tudiant</a></li>
 							<li><a href="#">Ajouter un devoir</a></li>
 						</ul>
 					</li>
@@ -45,4 +45,11 @@
     <div>
         {{> yield}}
     </div>
+		<footer>
+		 <div class="navbar navbar-default navbar-fixed-bottom">
+			<div class="container">
+				<p class="navbar-text pull-left"> 2015 - Site Built By Gabriel.</p>
+			</div>  
+		</div>
+	</footer>
 </template>
