Ajout template etudiant
ajout d'un nouveau template et mise en place des premieres fonctions de
celui ci

--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -1,14 +1,6 @@
 ﻿<template name="mainLayout">
     <head>
     <title>Gestion des etudiants</title>
-<!--	<link rel="stylesheet" href="../assets/styles/bootstrap.css" />
-	<link rel="stylesheet" href="../assets/styles/bootstrap.min.css" />
-	<link rel="stylesheet" href="../assets/styles/bootstrap-theme.css"/>
-	<link rel="stylesheet" href="../assets/styles/bootstrap-theme.min.css"/>
-	<link rel="stylesheet" href="../assets/styles/style.css" />
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="../assets/js/bootstrap.js"></script>
-	<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script> -->
   </head>
   
 	<header>
@@ -25,7 +17,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Liste des Etudiants</a></li>
+					<li><a href="http://localhost:3000/etudiant">Liste des Etudiants</a></li>
 					<li><a href="#">Liste des Devoirs</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
