--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -3,7 +3,17 @@
 		<div class="container">
 			<div class="jumbotron">
 				<p> Liste des etudiants a venir... </p>
-				
+				<ul>
+				{{#each etudiants}}
+					<li>{{ nom }}</li>
+					<li>{{ prenom }}</li>
+					<li>{{ groupe }}</li>
+					<li>{{ mail }}</li>
+					<li>{{ adresse }}</li>
+					<li>{{ cp }}</li>
+					<li>{{ ville }}</li>
+				{{/each}}
+				</ul>
 			</div>
 		</div>
 		
