Création formulaire ajout étudiant
possibilité d'ajouter un étudiant via un formulaire

--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -40,7 +40,7 @@
 		<footer>
 		 <div class="navbar navbar-default navbar-fixed-bottom">
 			<div class="container">
-				<p class="navbar-text pull-left"> 2015 - Site Built By Gabriel.</p>
+				<p class="navbar-text pull-left"> 2015 - Site Built By Gabriel & Damien étudiant en DUT2.</p>
 			</div>  
 		</div>
 	</footer>
