--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -76,7 +76,7 @@
                 <div class="control-group">
                     <label class="control-label">Groupe</label>
                     <div class="controls">
-                        <select id="Groupe" name="Groupe" class="input-xlarge">
+                        <select id="Groupe" name="groupe" class="input-xlarge">
                             <option value="" selected="selected">(choisissez un groupe)</option>
                             <option value="A">A</option>
                             <option value="B">B</option>
@@ -125,14 +125,15 @@
                         <p class="help-block"></p>
                     </div>
                 </div>
-
+				<input class="add" type="submit" value="Valider"  />
             </fieldset>
         </form>
 	</div>
 	
-	<input class="add" type="button" value="Valider"  />
+	
 	</div>
 	</div>
+		
 		
 </body>
 </template>
