modifications mineures formulaire etudiant

--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -78,15 +78,15 @@
 						<div class="controls">
 							<select id="Groupe" name="groupe" class="input-xlarge">
 								<option value="" selected="selected">(choisissez un groupe)</option>
-								<option value="A">1A</option>
-								<option value="B">1B</option>
-								<option value="C">1C</option>
-								<option value="C">2A</option>
-								<option value="C">2B</option>
-								<option value="C">2C</option>
-								<option value="C">IPI</option>
-								<option value="C">PEL</option>
-								<option value="C">LP</option>
+								<option value="1A">1A</option>
+								<option value="1B">1B</option>
+								<option value="1C">1C</option>
+								<option value="2A">2A</option>
+								<option value="2B">2B</option>
+								<option value="2C">2C</option>
+								<option value="IPI">IPI</option>
+								<option value="PEL">PEL</option>
+								<option value="LP">LP</option>
 							</select>
 						</div>
 					</div>
