Ajout de la vue devoir et de l'affichage de la BDD
configuration de la vue devoir et de sa route, possibilité de voir la
liste des devoirs

--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -24,7 +24,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								{{#each etudiants}}
+								{{#each etudiant}}
 								<tr>
 									<td name="nom">{{ nom }}</td>
 									<td name="prenom">{{ prenom }}</td>
