--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -1,7 +1,7 @@
 ﻿<template name="mainLayout">
     <head>
-    <title>Gestion des etudiants</title>
-  </head>
+		<title>Gestion des etudiants</title>
+	</head>
   
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -13,12 +13,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="http://localhost:3000">Accueil</a>
+				<a class="navbar-brand" href="{{pathFor route='index'}}">Accueil</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="http://localhost:3000/etudiant">Liste des Etudiants</a></li>
-					<li><a href="#">Liste des Devoirs</a></li>
+					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
+					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 						<ul class="dropdown-menu">
