--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -2,7 +2,7 @@
     <head>
     <title>Gestion des etudiants</title>
   </head>
-  
+	<!-- TEST -->
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
