--- a/client/vues/application/profs.html
+++ b/client/vues/application/profs.html
@@ -23,7 +23,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								{{#each prof}}
+								{{#each profs}}
 								<tr>
 									<td name="nom">{{ nom }}</td>
 									<td name="prenom">{{ prenom }}</td>
