--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -19,6 +19,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="http://localhost:3000/etudiant">Liste des Etudiants</a></li>
 					<li><a href="http://localhost:3000/devoir">Liste des Devoirs</a></li>
+					<li><a href="http://localhost:3000/profs">Liste des Profs</a></li>	
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 						<ul class="dropdown-menu">
