Ajout du dossier Compte rendu

--- a/client/vues/application/devoir.html
+++ b/client/vues/application/devoir.html
@@ -17,7 +17,7 @@
 									<th><input type="text" class="form-control" placeholder="Matière" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Date" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Coefficient" disabled></th>
-									<!--<th> Actions </th> -->
+									<th> Actions </th> 
 								</tr>
 							</thead>
 							<tbody>
