--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -19,14 +19,14 @@
 				<ul class="nav navbar-nav">
 					<li><a href="http://localhost:3000/etudiant">Liste des Etudiants</a></li>
 					<li><a href="http://localhost:3000/devoir">Liste des Devoirs</a></li>
-					<li><a href="http://localhost:3000/notes">Notes</a></li>
-					<li><a href="http://localhost:3000/absence">Absence</a></li>
-					<li><a href="http://localhost:3000/retard">Retard</a></li>					
+					<li><a href="http://localhost:3000/etudiant/notes">Notes</a></li>
+					<li><a href="http://localhost:3000/etudiant/absence">Absence</a></li>
+					<li><a href="http://localhost:3000/etudiant/retard">Retard</a></li>					
 					<li><a href="http://localhost:3000/notes">Notes</a></li>	
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Ajouter une abscence</a></li>
+							<li><a href="#">Ajouter une absence</a></li>
 							<li><a href="#">Ajouter un retard</a></li>
 							<li class="divider"></li>
 							<li><a href="#">Ajouter un étudiant</a></li>
