--- a/client/vues/application/notes.html
+++ b/client/vues/application/notes.html
@@ -13,8 +13,8 @@
 						<table class="table">
 							<thead>
 								<tr class="filters">
-									<th><input type="text" class="form-control" placeholder="note" disabled></th>
-									<th><input type="text" class="form-control" placeholder="iDEtudiant" disabled></th>
+									<th><input type="text" class="form-control" placeholder="Note" disabled></th>
+									<th><input type="text" class="form-control" placeholder="idEtudiant" disabled></th>
 									<th><input type="text" class="form-control" placeholder="idDevoir" disabled></th>
 									<th> Actions </th> 
 								</tr>
