--- a/client/vues/application/retard.html
+++ b/client/vues/application/retard.html
@@ -46,7 +46,7 @@
 					<div class="control-group">
 						<label class="control-label">Date Retard</label>
 						<div class="controls">
-							<input id="date_retard" name="date_retard" type="text" placeholder="date_retard"
+							<input id="date_retard" name="date_retard" type="date" placeholder="date_retard"
 							class="input-xlarge">
 							<p class="help-block"></p>
 						</div>
