--- a/client/vues/application/ajouterNote.html
+++ b/client/vues/application/ajouterNote.html
@@ -5,7 +5,7 @@
 				<div class="row">
 					<form class="form-horizontal">
 					<fieldset>
-					<h2>Ajoutay des notes pour {{nom}}</h2>
+					<h2>Ajoutay des notes pour <i name="devoir">{{nom}} </i></h2>
 					
 					<div class="row">
 					<div class="panel panel-primary filterable">
