encodage utf8 + compte rendu

--- a/client/vues/application/404.html
+++ b/client/vues/application/404.html
@@ -1,6 +1,6 @@
-<template name="notFound">
+ï»¿<template name="notFound">
     <div class="not-found page jumbotron">
       <h2>404</h2>
-      <p>Désolé, nous ne pouvons pas trouver une page à cette adresse.</p>
+      <p>DÃ©solÃ©, nous ne pouvons pas trouver une page Ã  cette adresse.</p>
     </div>
 </template>
