--- a/client/vues/application/ajouterAbsence.html
+++ b/client/vues/application/ajouterAbsence.html
@@ -5,12 +5,12 @@
 				<div class="row">
 					<form class="form-horizontal">
 					<fieldset>
-					<h2>Ajouter une absence pour <i name="etudiant">{{nom}}</i></h2>
+					<h2>Ajouter une absence pour <i name="etudiant">{{nom}} </i></h2>
 					
 					<div class="row">
 					<div class="panel panel-primary filterable">
 						<div class="panel-heading">
-							<h3 class="panel-title">Etudiants</h3>
+							<h3 class="panel-title">Absence</h3>
 							<div class="pull-right">
 							</div>
 						</div>
