--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -33,7 +33,7 @@
 									<td name="adresse">{{ adresse }}</td>
 									<td name="cp">{{ cp }}</td>
 									<td name="ville">{{ ville }}</td>
-									<td>  <a class="btn btn-danger delete" href="#">Suppr</a> </td>
+									<td> <a class="btn btn-danger delete" href="#">Suppr</a> <a class="button" href="/absence/{{nom}}">add abs</a>&nbsp;<a class="button" href="/retard/{{prenom}}">add retard</a></td>
 								</tr>
 								{{/each}}
 							</tbody>
