--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -1,8 +1,8 @@
 ﻿<template name="mainLayout">
     <head>
-    <title>Gestion des etudiants</title>
-  </head>
-	<!-- TEST -->
+		<title>Gestion des etudiants</title>
+	</head>
+  
 	<header>
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
@@ -13,20 +13,16 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="http://localhost:3000">Accueil</a>
+				<a class="navbar-brand" href="{{pathFor route='index'}}">Accueil</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="http://localhost:3000/etudiant">Liste des Etudiants</a></li>
-					<li><a href="http://localhost:3000/devoir">Liste des Devoirs</a></li>
-					<li><a href="http://localhost:3000/devoir">Liste des Profs</a></li>			
-					<li><a href="http://localhost:3000/notes">Notes</a></li>
-					<li><a href="http://localhost:3000/absence">Absence</a></li>
-					<li><a href="http://localhost:3000/retard">Retard</a></li>						
+					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
+					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Ajouter une absence</a></li>
+							<li><a href="#">Ajouter une abscence</a></li>
 							<li><a href="#">Ajouter un retard</a></li>
 							<li class="divider"></li>
 							<li><a href="#">Ajouter un étudiant</a></li>
