Amélioration de l'ajout de note

--- a/client/vues/application/ajouterNote.html
+++ b/client/vues/application/ajouterNote.html
@@ -5,8 +5,10 @@
 				<div class="row">
 					<form class="form-horizontal">
 					<fieldset>
-					<h2>Ajoutay des notes pour <i name="devoir">{{nom}} </i></h2>
-					
+					<h2>Ajouter des notes pour <i id="devoir">{{nom}}</i></h2>
+					<div id="id_div_1" style="display:none;" >
+						<input id="id" name="nom" type="text" placeholder="id" class="input-xlarge" value="{{nom}}">
+					</div>
 					<div class="row">
 					<div class="panel panel-primary filterable">
 						<div class="panel-heading">
