--- a/client/vues/application/devoir.html
+++ b/client/vues/application/devoir.html
@@ -27,7 +27,7 @@
 									<td name="matiere">{{ matiere }}</td>
 									<td name="date">{{ date }}</td>
 									<td name="coeff">{{ coeff }}</td>
-									<td> <a class="btn btn-danger delete" href="#">Suppr</a> <a class="button" href="/devoir/{{nom}}">add notes</a></td>
+									<td> <a class="btn btn-danger delete" href="#">Suppr</a> <a class="button" href="/devoir/{{_id}}/{{nom}}">add notes</a></td>
 								</tr>
 								{{/each}}
 							</tbody>
