--- a/client/vues/application/ajouterAbsence.html
+++ b/client/vues/application/ajouterAbsence.html
@@ -6,7 +6,6 @@
 					<form class="form-horizontal">
 					<fieldset>
 					<h2>Ajouter une absence pour <i name="etudiant">{{nom}} </i></h2>
-					
 					<div class="row">
 					<div class="panel panel-primary filterable">
 						<div class="panel-heading">
@@ -14,7 +13,8 @@
 							<div class="pull-right">
 							</div>
 						</div>
-						<table class="table">
+						
+						<table id="table" class="table">
 							<thead>
 								<tr class="filters">
 									<th><input type="text" class="form-control" placeholder="Nom" disabled></th>
