Ajout des metadonnées de l'étudiant

--- a/client/vues/application/carnetEtu.html
+++ b/client/vues/application/carnetEtu.html
@@ -3,7 +3,22 @@
 		<div class="container">
 			<div class="jumbotron">
 				<div class="row">
-						<p> {{_id}} nom : {{nom}} </p> 
+					<div class="media">
+						
+						<div class="media-body">
+							<h4 class="media-heading">Information Etudiant</h4>
+							<ul class="informationEtu" style="list-style-type:none">
+						<li><label>Nom :</label><span> {{prenom}} {{nom}}</span></li>
+						<li><label>Groupe :</label><span> {{groupe}}</span></li>
+                        <li><label>Adresse :</label><span>{{adresse}}, {{cp}} {{ville}}</span></li>
+                        <li><label>Email :</label><span>{{mail}}</span></li>
+                    </ul>
+							
+						</div>
+						<div class="media-right">
+							<a href="#"><img class="media-object" src="http://lorempixel.com/850/850/?random=123" width="150" height="150"></a>
+						</div>
+					</div> 
 				</div>
 			</div>	
 		</div>
