--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -33,7 +33,7 @@
 									<td name="adresse">{{ adresse }}</td>
 									<td name="cp">{{ cp }}</td>
 									<td name="ville">{{ ville }}</td>
-									<td>  <a class="btn btn-danger delete" href="#">Suppr</a> <a class="button" href="/etudiant/{{_id}}">carnet</a></td>
+									<td>  <a class="btn btn-danger delete" href="#">Suppr</a> <a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
 								</tr>
 								{{/each}}
 							</tbody>
@@ -48,7 +48,7 @@
 				<div class="row">
 					<form class="form-horizontal">
 					<fieldset>
-					<h2>Ajoutez un etudiant</h2>
+					<h2>Ajouter un etudiant</h2>
          
 					<!-- nom -->
 					<div class="control-group">
