--- a/client/vues/application/carnetEtu.html
+++ b/client/vues/application/carnetEtu.html
@@ -4,7 +4,6 @@
 			<div class="jumbotron">
 				<div class="row">
 					<div class="media">
-						
 						<div class="media-body">
 							<h4 class="media-heading">Information Etudiant</h4>
 							<ul class="informationEtu" style="list-style-type:none">
@@ -12,8 +11,7 @@
 						<li><label>Groupe :</label><span> {{groupe}}</span></li>
                         <li><label>Adresse :</label><span>{{adresse}}, {{cp}} {{ville}}</span></li>
                         <li><label>Email :</label><span>{{mail}}</span></li>
-                    </ul>
-							
+                    </ul>	
 						</div>
 						<div class="media-right">
 							<a href="#"><img class="media-object" src="http://lorempixel.com/850/850/?random=123" width="150" height="150"></a>
@@ -21,6 +19,7 @@
 					</div> 
 				</div>
 			</div>	
+		<h1>WIP</h1>
 		</div>
 	</body>
 </template>
