--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -30,6 +30,9 @@
 						</ul>
 					</li>
 				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{{pathFor route='semestre'}}">Semestre</a></li>
+				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
