--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -33,8 +33,9 @@
 									<td name="adresse">{{ adresse }}</td>
 									<td name="cp">{{ cp }}</td>
 									<td name="ville">{{ ville }}</td>
-									<td> <a class="btn btn-danger delete" href="#">Suppr</a> 
-									<a class="button" href="/absence/{{nom}}">add abs</a>&nbsp;<a class="button" href="/retard/{{prenom}}">add retard</a></td>
+									<td> <a class="btn btn-danger delete" href="#">Suppr</a>
+										 <a class="btn btn-danger delete" href="#">infos</a>
+									</td> 
 								</tr>
 								{{/each}}
 							</tbody>
@@ -137,7 +138,7 @@
 					</form>
 				</div>
 			</div>
-		</div>-->
+		</div>
 		<script>
 			$(document).ready(function(){
 				$('.filterable .btn-filter').click(function(){
