--- a/client/vues/application/etudiant.html
+++ b/client/vues/application/etudiant.html
@@ -20,6 +20,7 @@
 									<th><input type="text" class="form-control" placeholder="Adresse" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Code postal" disabled></th>
 									<th><input type="text" class="form-control" placeholder="Ville" disabled></th>
+									<th>Inscription</th>
 									<th> Actions </th> 
 								</tr>
 							</thead>
@@ -33,6 +34,12 @@
 									<td name="adresse">{{ adresse }}</td>
 									<td name="cp">{{ cp }}</td>
 									<td name="ville">{{ ville }}</td>
+									<td name="semestre">
+										<select id="semestre" name="selectSemestre" class="input-xlarge">
+											{{#each semestre}}
+											<option value="sem">{{nom}}</option>
+											{{/each}}
+										</select></td>
 									<td>  <a class="btn btn-danger delete" href="#">Suppr</a> <a class="btn btn-info" href="/etudiant/{{_id}}">carnet</a></td>
 								</tr>
 								{{/each}}
@@ -129,6 +136,19 @@
 							<input id="cp" name="cp" type="text" placeholder="cp"
 							class="input-xlarge">
 							<p class="help-block"></p>
+						</div>
+					</div>
+					
+					 <!-- inscription -->
+					<div class="control-group">
+						<label class="control-label">Inscrire l'étudiant à un semestre</label>
+						<div class="controls">
+							<select id="semestre" name="semestre" class="input-xlarge">
+								<option value="" selected="selected">(choisissez un semestre)</option>
+								{{#each semestre}}
+									<option value = {{nom}}>{{nom}}</option>
+								{{/each}}
+							</select>
 						</div>
 					</div>
 					
