Possibilité d'inscrire des étudiants dans la base Mongo ET à un semestre via un fichier Excel

--- a/client/vues/application/Semestre.html
+++ b/client/vues/application/Semestre.html
@@ -14,6 +14,8 @@
 							<thead>
 								<tr class="filters">
 									<th><input type="text" class="form-control" placeholder="Nom" disabled></th>
+									<th><input type="text" class="form-control" placeholder="date Debut" disabled></th>
+									<th><input type="text" class="form-control" placeholder="Date Fin" disabled></th>
 									<th> Actions </th> 
 								</tr>
 							</thead>
@@ -21,7 +23,8 @@
 								{{#each semestre}}
 								<tr>
 									<td name="nom">{{ nom }}</td>
-
+									<td name="nom">{{ dateDebut }}</td>
+									<td name="nom">{{ dateFin }}</td>
 									<td>  <a class="btn btn-danger delete" href="#">Suppr</a></td>
 								</tr>
 								{{/each}}
@@ -37,7 +40,7 @@
 				<div class="row">
 					<form class="form-horizontal">
 					<fieldset>
-					<h2>Ajouter un semestre WIP</h2>
+					<h2>Ajouter un semestre </h2>
          
 					<!-- nom -->
 					<div class="control-group">
