Ajout des notes a un groupe
possibilité d'ajouter des notes aux étudiants, légère modifications du
modèle de la BDD pour l'enregistrement des notes qui était trop complexe

--- a/client/vues/layout.html
+++ b/client/vues/layout.html
@@ -19,16 +19,8 @@
 				<ul class="nav navbar-nav">
 					<li><a href="{{pathFor route='etudiant'}}">Liste des Etudiants</a></li>
 					<li><a href="{{pathFor route='devoir'}}">Liste des Devoirs</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Ajouter une abscence</a></li>
-							<li><a href="#">Ajouter un retard</a></li>
-							<li class="divider"></li>
-							<li><a href="#">Ajouter un étudiant</a></li>
-							<li><a href="#">Ajouter un devoir</a></li>
-						</ul>
-					</li>
+					<li><a href="{{pathFor route='inscription'}}">Inscription</a></li>
+					<li><a href="{{pathFor route='note'}}">Note</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="{{pathFor route='semestre'}}">Semestre</a></li>
